--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -35,3 +35,95 @@
         </div>
     {% endif %}
 </div>
+
+<style>
+.notifications-page {
+    padding: 2rem;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.notifications-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.notification-item {
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+    padding: 1rem;
+    background: rgba(44, 62, 80, 0.3);
+    border-radius: 8px;
+    transition: all 0.3s ease;
+}
+
+.notification-item.unread {
+    background: rgba(211, 84, 0, 0.1);
+    border-left: 4px solid var(--deep-orange);
+}
+
+.notification-icon {
+    width: 40px;
+    height: 40px;
+    background: rgba(211, 84, 0, 0.2);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--deep-orange);
+    font-size: 1.2rem;
+}
+
+.notification-content {
+    flex: 1;
+}
+
+.notification-content p {
+    margin: 0;
+    color: var(--light);
+}
+
+.notification-time {
+    font-size: 0.8rem;
+    color: var(--gray);
+}
+
+.mark-read-btn {
+    background: none;
+    border: none;
+    color: var(--gray);
+    cursor: pointer;
+    padding: 0.5rem;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.mark-read-btn:hover {
+    background: rgba(255, 255, 255, 0.1);
+    color: var(--light);
+}
+
+.empty-state {
+    text-align: center;
+    padding: 3rem;
+}
+
+.empty-icon {
+    font-size: 3rem;
+    color: var(--gray);
+    margin-bottom: 1rem;
+}
+
+.empty-state h3 {
+    color: var(--light);
+    margin-bottom: 0.5rem;
+}
+
+.empty-state p {
+    color: var(--gray);
+}
+</style>
+{% endblock %}
